--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.4.3",
-    "express": "^4.4.5"
+    "express": "^4.4.5",
+    "html2canvas": "^1.0.0-alpha.12"
   },
   "devDependencies": {},
   "scripts": {
