--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "estimator",
+  "name": "randomizer",
   "version": "1.0.0",
   "private": false,
   "license": "see LICENSE file",
@@ -19,11 +19,6 @@
     "type": "git",
     "url": "https://github.com/alexburr/CrochetBlanketRandomizer"
   },
-  "keywords": [
-    "bpm",
-    "jazz",
-    "song length"
-  ],
   "author": "alexbur",
   "bugs": {
     "url": "https://github.com/alexburr/CrochetBlanketRandomizer/issues"
